updating detox to run with monorepo
removing redundant ios logs - they come as part of the detox artifacts

changing text to validate on

[B2CQA-752] Enabling Android Detox CI flow (#1350)

Enabling Android Detox CI flow
Tweaking some timeouts
Force exit jest

trying test id for password test

updated lockfile and pods

removed redundant avd caching and altered forceexit override

removing perf test for now as it's redundant

patching install timeout

Trigger Build

detect open handles and make android headless

whoops, actually headless now

removing cache to force pnpm reinstall

trigger CI

updating patch file to correct version

updating to trace logs

removing cleanup as a test

trigger CI

trigger CI

reducing android log level and improved start script in docs

updated docs and test mobile workflow

fixed typo

trigger CI

updated ruby and removed comments

doing trace logging again

increasing detox timeout to match jest timeout and splitting mobile test and codecheck into separate workflows

--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
     "patchedDependencies": {
       "react-native-fast-crypto@2.2.0": "patches/react-native-fast-crypto@2.2.0.patch",
       "react-native-video@5.2.0": "patches/react-native-video@5.2.0.patch",
-      "react-native-image-crop-tools@1.6.2": "patches/react-native-image-crop-tools@1.6.2.patch"
+      "react-native-image-crop-tools@1.6.2": "patches/react-native-image-crop-tools@1.6.2.patch",
+      "detox@19.12.3": "patches/detox@19.12.3.patch"
     }
   }
 }
