--- a/libs/ledgerjs/packages/hw-app-eth/tsconfig.json
+++ b/libs/ledgerjs/packages/hw-app-eth/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "lib"
+    "outDir": "lib",
+    "moduleResolution": "node"
   },
   "include": ["src/**/*"]
 }
